# truenas_smart_parser

./: .gitignore  CLAUDE.md  README.md  idea.md  pyproject.toml
src/nas_smartdata/: __init__.py  cli.py  parser.py
src/truenas_smart_parser/: __init__.py  cli.py  display.py  parser.py
tests/: test_display.py  test_json_serialization.py  test_parser.py
